ToDo App/style.css
*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body{
  background-image: linear-gradient(120deg,#f6d365,#fda085);
  color: white;
  min-height: 100vh;
}

h1{
  font-size: 3rem;
}

h1,form{
  min-height: 20vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

form input,form button{
  padding: 0.5rem;
  border: none;
  font-size: 1.5rem;
  background-color: white;
}

form button{
  cursor: pointer;
  background-color: inherit;
  color: white;
  transition: all ease 0.5s;
}

form button:hover{
  color: #fda085;
  background-color: white;
}

.container{
  position: relative;
  height: 70vh;
  width: 100%;
}

.todo-list{
  margin-left: auto;
  margin-right: auto;
  height: 70vh;
  width: 500px;
}

.list-obj{
  margin-bottom: 15px;
  height: 8vh;
  width: 100%;
  display: flex;
}

.list-obj-value{
  border: none;
  margin: 0;
  padding: 0;
  background-color: white;
  height: 100%;
  width: 80%;
  list-style-type: none;
}

.list-obj-mark , .list-obj-trash{
  border: none;
  margin: 0;
  padding: 0;
  height: 100%;
  width: 10%;
  font-size: 1.5rem;
  color: white;
  background-color: inherit;
  transition: all 0.5 ease;
}

